# vulkan-engine

./: CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: vert.glsl
include/core/: Device.h  Engine.h  SwapChain.h
include/gfx/: Buffer.h  GraphicsPipeline.h  Mesh.h  Model.h  Renderer.h  Vertex.h  VertexBuffer.h
include/util/: ShaderUtils.h
scripts/: setup.bat  setup.sh
src/: CMakeLists.txt  main.cpp
src/core/: Device.cpp  Engine.cpp  Globals.cpp  SwapChain.cpp  main.cpp
src/gfx/: Buffer.cpp  GraphicsPipeline.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Vertex.cpp  VertexBuffer.cpp
